# simon-says

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tools.rs  ytdlp.rs
src/components/: QueuePanel.tsx  SimonRing.tsx  StreamPicker.tsx  ThemeMenu.tsx
src/lib/: tauri.ts  themes.ts
