[package]
name = "simon-says"
version = "1.0.2"
description = "A friendly desktop YouTube downloader wrapping yt-dlp and ffmpeg."
authors = ["kbosompem"]
edition = "2021"

[lib]
name = "simon_says_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
